# prompttrap

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE-ENTERPRISE.txt  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  security-scan.yml
core/: auth.py  config.py  health.py  main.py
core/proxy/: azure.py  claude.py  openai.py  openai_proxy.py  router.py
docs/: api.md  deployment.md  development.md
tests/: conftest.py  test_auth.py  test_health.py  test_proxy.py
tests/integration/: test_e2e.py
